2018-11-28  Florian Weimer  <fweimer@redhat.com>

	* support/support.h (support_quote_string): Do not use str
	parameter name.

2018-11-27  Florian Weimer  <fweimer@redhat.com>

	* support/support.h (support_quote_string): Declare.
	* support/support_quote_string.c: New file.
	* support/tst-support_quote_string.c: Likewise.
	* support/Makefile (libsupport-routines): Add
	support_quote_string.
	(tests): Add tst-support_quote_string.

2018-12-10  Florian Weimer  <fweimer@redhat.com>

	[BZ #23972]
	* sysdeps/unix/sysv/linux/getdents64.c (handle_overflow): Check
	offset instead of count for clarity.  Fix typo in comment.
	(__old_getdents64): Keep track of previous offset.  Use it to call
	handle_overflow.
	* sysdeps/unix/sysv/linux/tst-readdir64-compat.c (do_test): Check
	that d_off is never zero.

2018-11-30  Tulio Magno Quites Machado Filho  <tuliom@linux.ibm.com>

	[BZ #23690]
	* elf/dl-runtime.c (_dl_profile_fixup): Guarantee memory
	modification order when accessing reloc_result->addr.
	* include/link.h (reloc_result): Add field init.
	* nptl/Makefile (tests): Add tst-audit-threads.
	(modules-names): Add tst-audit-threads-mod1 and
	tst-audit-threads-mod2.
	Add rules to build tst-audit-threads.
	* nptl/tst-audit-threads-mod1.c: New file.
	* nptl/tst-audit-threads-mod2.c: Likewise.
	* nptl/tst-audit-threads.c: Likewise.
	* nptl/tst-audit-threads.h: Likewise.

2018-11-26  Florian Weimer  <fweimer@redhat.com>

	[BZ #23907]
	* malloc/malloc.c (_int_free): Validate tc_idx before checking for
	double-frees.


2018-11-20  DJ Delorie  <dj@redhat.com>

	* malloc/malloc.c (tcache_entry): Add key field.
	(tcache_put): Set it.
	(tcache_get): Likewise.
	(_int_free): Check for double free in tcache.
	* malloc/tst-tcfree1.c: New.
	* malloc/tst-tcfree2.c: New.
	* malloc/Makefile: Run the new tests.
	* manual/probes.texi: Document memory_tcache_double_free probe.

	* dlfcn/dlerror.c (check_free): Prevent double frees.

2018-11-27  Florian Weimer  <fweimer@redhat.com>

	[BZ #23927]